<resources>
    <string name="app_name">Freela</string>
    <string name="welcome">Bem Vindo!</string>
    <string name="welcomeback">Bem Vindo de volta!</string>
    <string name="signup">CADASTRAR</string>
    <string name="login_new_user">Novo Usúario?</string>
    <string name="login_register">Cadastre-se</string>
    <string name="login">ENTRAR</string>
    <string name="login_input_email">Email</string>
    <string name="login_input_password">Senha</string>
    <string name="login_text_forgot">Esqueci a senha</string>
    <string name="login_content_logo">Logo</string>
    <string name="back">Voltar</string>
    <string name="register_button_back">Voltar</string>

    <!-- Dados pessoais -->
    <string name="register_personal_data">Dados Pessoais</string>
    <string name="register_name">Nome completo</string>
    <string name="register_birthday">Data de nascimento</string>
    <string name="register_cpf">CPF</string>
    <string name="register_email">E-mail</string>
    <!--<string name="register_confirm_email">Confirmar E-mail</string>-->
    <string name="register_input_confirm_email">Confirme seu e-mail</string>
    <string name="register_phone">Número com DDD</string>
    <string name="register_agree_term">Li e estou de acordo com o </string>
    <string name="register_privacy_policy">Termo de Uso e Política de Privacidade</string>
    <string name="register_button_continue">CONTINUAR</string>

    <!-- Endereço -->
    <string name="register_address">Endereço Pessoal</string>
    <string name="register_address_cep">CEP</string>
    <string name="register_input_address">Endereço</string>
    <string name="register_address_number">Nº</string>
    <string name="register_address_complement">Complemento</string>
    <string name="register_address_district">Bairro</string>
    <string name="register_address_city">Cidade</string>
    <string name="register_address_state">Estado</string>

    <!-- Senha -->
    <string name="register_password_user">Crie uma senha</string>
    <string name="register_password">Senha</string>
    <string name="register_confirm_password">Confirmar Senha</string>
    <string name="password_field">Campo de Senha</string>

    <!-- Validações e mensagens -->
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="passwords_do_not_match">As senhas não conferem</string>
    <string name="weak_password">Senha fraca, tente uma mais segura</string>
    <string name="unexpected_error">Ocorreu um erro inesperado</string>
    <string name="register_success">Senha cadastrada com sucesso!</string>
    <string name="error_email_missing">Email ausente</string>
    <string name="error_email_in_use">Este e-mail já está cadastrado. Tente outro ou faça login.</string>


    <!-- Layout dinâmico -->
    <string name="new_user">
    <font color="#050505">Novo usuário?</font> <font color="#0451FF">Cadastre-se</font>
</string>
    <string name="bank_data_back">Dados Bancários \nPara Recebimento</string>
    <string name="bank_description_name_bank">Digite o nome ou código do seu banco aqui</string>
    <string name="bank_description_agency">Digite o número da sua agência</string>
    <string name="bank_description_account">Digite o número da sua conta</string>
    <string name="bank_description_pix">Insira a sua chave PIX</string>
    <string name="bank_description_individual">Pessoa Física</string>
    <string name="bank_description_company">Pessoa Jurídica</string>
    <string name="bank_description_button_next">Salvar informações e continuar</string>
    <string name="bank_hint_input">Banco</string>
    <string name="bank_list_search_not_find">Nenhum banco encontrado</string>
    <string name="bank_hint_agency">Agência</string>
    <string name="bank_hint_account">Conta</string>
    <string name="bank_hint_account_type">Qual é o seu tipo de conta</string>
    <string name="bank_account_type_current">Conta corrente</string>
    <string name="bank_account_type_savings">Conta poupança</string>
    <string name="bank_radio_individual">Pessoa Física</string>
    <string name="bank_radio_company">Pessoa Jurídica</string>
    <string name="bank_input_pix">PIX</string>
    <string name="buttom_sheet_bank_title">Escolha uma opção</string>
    <string name="button_sheet_bank_input">Digite aqui para pesquisar</string>
    <string name="validation_error_title">Erro de validação</string>
    <string name="ok">OK</string>
    <string name="error_empty_bank">Banco é obrigatório.</string>
    <string name="error_empty_agency">Agência inválida.</string>
    <string name="error_empty_account">Conta inválida.</string>
    <string name="error_empty_account_type">Tipo da conta é obrigatório.</string>
    <string name="error_empty_pix">PIX é obrigatório.</string>
    <string name="error_generic">Ocorreu um erro inesperado.</string>
    <string name="no_banks_found">Lista não encontrada</string>
    <string name="api_connection_failed">Não foi possível conectar a API</string>
    <string name="register_payment_title">Formas de Pagamento</string>
    <string name="register_payment_card_type">Escolha uma das opções</string>
    <string name="register_payment_card_name">Nome Completo</string>
    <string name="register_payment_card_number">Número do Cartão</string>
    <string name="register_payment_card_validade">Válidade</string>
    <string name="register_payment_card_cvv">CVV</string>
    <string name="register_payment_add_bank">Adicionar conta bancária</string>
    <string name="back_button">Botão Voltar</string>

    <string name="register_term_title">Os Termos e a política de Privacidade \n do WhatsApp serão atualizados.</string>
    <string name="register_term_subtitle_one">Atualizações importantes</string>
    <string name="register_term_subtitle_two">Lei Geral de Proteção de Dados.</string>
    <string name="register_term_text_paragraph">Em caso de incidentes de segurança que possa gerar risco ou dano relevante para você ou qualquer um de nossos usuários/clientes, comunicaremos aos afetados e a Autoridade Nacional de Proteção de Dados sobre o ocorrido, em consonância com as disposições da Lei Geral de Proteção de Dados.</string>
    <string name="register_term_text_paragraph_one">I – Quaisquer consequências decorrentes da negligência, imprudência ou imperícia dos usuários em relação a seus dados individuais. Garantimos e nos responsabilizamos apenas pela segurança dos processos de tratamento de dados e do cumprimento das finalidades descritas no presente instrumento. Destacamos que a responsabilidade em relação à confidencialidade dos dados de acesso é do usuário.</string>
    <string name="register_term_text_paragraph_two">II – Ações maliciosas
        <font color="#0451FF">de terceiros, como ataque</font>
        de hackers, exceto se comprovada conduta culposa ou deliberada da (nome empresarial simplificado).
        Destacamos que em caso de incidentes de segurança que possam gerar risco ou dano relevante para você ou qualquer um de nossos usuários/clientes, comunicaremos aos afetados e a Autoridade Nacional de Proteção de Dados sobre o ocorrido e cumpriremos as providências necessárias.
    </string>
    <string name="register_term_text_paragraph_three">
        III – Inveracidade das informações inseridas pelo usuário/cliente nos registros necessários para a utilização dos serviços da (
        <font color="#0451FF">nome empresarial simplificado</font>
        ); quaisquer consequências.
    </string>
    <string name="register_term_button">Concordar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigator_home">Home</string>
    <string name="bottom_navigator_calendar">Calendário</string>
    <string name="bottom_navigator_chat">Chat</string>
    <string name="bottom_navigator_profile">Perfil</string>
    <string name="hello_user">Olá, %1$s</string>
    <string name="default_user_name">Usuário</string>
    <string name="home_text_greeting">Your finances are looking good</string>
    <string name="home_text_offer">Get 30% off</string>
    <string name="home_text_discont">Just by Booking Home Services</string>
    <string name="home_text_photo_profile">Foto de Perfil</string>
    <string name="home_text_offer_discount">Oferta de serviços</string>
    <string name="home_text_services">Popular Services</string>
    <string name="home_text_see_all">Ver tudo</string>
    <string name="home_text_plumbe">Plumbing</string>
    <string name="home_text_eletric">Eletric work</string>
    <string name="home_text_solar">Solar</string>
    <string name="home_text_services_providers">Services Providers</string>
    <string name="home_text_person_1">Maskot Kota</string>
    <string name="home_text_person_2">Shams Jans</string>
    <string name="home_text_rating">4.8</string>
    <string name="home_text_details">Details</string>

    <string name="forgot_password_title">Esqueceu a Senha?</string>
    <string name="forgot_password_subtitle">Informe seu email e enviaremos para você as \n instruções para redefinir sua senha.</string>
    <string name="forgout_email">E-mail</string>
    <string name="button_next">CONTINUAR</string>

    <string name="forgot_check_title">Verifique seu E-mail</string>
    <string name="forgot_check_subtitle">Acamos de enviar um código para o seu \n E-mail registrado</string>
    <string name="forgout_check_text_timer">00:36</string>
    <string name="forgot_check_text_layout">Não recebeu um código?</string>
    <string name="forgot_check_text_resend">Reenviar</string>
    <string name="button_check">VERIFICAR</string>

    <string name="forgot_reset_title">Redefina sua senha</string>
    <string name="forgot_reset_subtitle">Preencha os campos abaixo</string>
    <string name="forgot_reset_password">Nova Senha</string>
    <string name="forgot_reset_confirm_password">Confirme sua  Senha</string>
    <string name="forgot_reset_button">REDEFINIR SENHA</string>

    <string name="forgot_sucess_title">Redefinido com sucesso</string>
    <string name="forgot_sucess_subtitle">Agora você pode fazer login na sua conta</string>
    <string name="forgot_sucess_button">CONECTE-SE AGORA</string>

    <string name="cardpay_text_title">Formas de Pagamento</string>
    <string name="cardpay_type_card">Escolha uma das opções:</string>
    <string name="cardpay_type_card_debit">Débito</string>
    <string name="cardpay_type_card_credit">Crédito</string>
    <string name="cardpay_input_name">Nome Completo</string>
    <string name="cardpay_input_card_number">Número do Cartão</string>
    <string name="cardpay_input_validity">Validade</string>
    <string name="cardpay_input_cvv">CVV</string>
    <string name="cardpay_account_created">Cadastro Realizado com Sucesso!</string>

</resources>
